# sphinxbase

./: Makefile.am  README  build_armv7.sh  build_iphone.sh  configure.ac  sphinxbase-CocoaPod.pc.in
include/: Makefile.am
include/Sphinxbase-CocoaPod/: ad.h  bio.h  cmn.h  fe.h  fixpoint.h  glist.h  ngram_model.h  profile.h  strfuncs.h  yin.h
include/sphinxbase-CocoaPod/: agc.h  bitarr.h  case.h  ckd_alloc.h  cmd_ln.h  err.h  feat.h  filename.h  fsg_model.h  heap.h  jsgf.h  matrix.h  pio.h  priority_queue.h  sbthread.h
src/libsphinxad/: ad_openal.c  ad_win32.c
src/libsphinxbase/fe/: fe_interface.c  fe_internal.h  fe_noise.c  fe_noise.h  fe_prespch_buf.c  fe_prespch_buf.h  fe_sigproc.c  fe_type.h  fe_warp.c  fe_warp_affine.c  fe_warp_affine.h  fe_warp_inverse_linear.c  fe_warp_inverse_linear.h  fe_warp_piecewise_linear.c  fe_warp_piecewise_linear.h  fixlog.c  yin.c
src/libsphinxbase/feat/: agc.c  cmn.c  cmn_live.c  feat.c  lda.c
src/libsphinxbase/lm/: fsg_model.c  jsgf.c  jsgf_internal.h  jsgf_parser.c  jsgf_parser.y  lm_trie.c  lm_trie.h  lm_trie_quant.c  lm_trie_quant.h  ngram_model.c  ngram_model_internal.h  ngram_model_set.c  ngram_model_trie.c  ngram_model_trie.h  ngrams_raw.c  ngrams_raw.h
src/libsphinxbase/util/: bio.c  bitarr.c  bitvec.c  blas_lite.c  case.c  ckd_alloc.c  cmd_ln.c  dtoa.c  err.c  f2c_lite.c  filename.c  genrand.c  (+14 more)
src/sphinx_adtools/: cont_seg.c  sphinx_pitch.c
src/sphinx_cepview/: main_cepview.c
src/sphinx_fe/: cmd_ln_defn.h  sphinx_fe.c
src/sphinx_jsgf2fsg/: main.c
src/sphinx_lmtools/: sphinx_lm_convert.c  sphinx_lm_eval.c
